Enhance database schema: add 'provider' field to users table, create daily_workout_logs and workout tables with corresponding indexes, and update mock data for workouts and daily logs.